--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,13 +20,15 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:src="@drawable/instagram"/>
+                    android:layout_height="100dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/eunoia_small"
+            android:layout_centerHorizontal="true"/>
     <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
+
             android:src="@drawable/ic_outline_message_24"
             android:layout_alignParentRight="true"/>
 
