--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,11 +5,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/back_ui"
         tools:context=".SignUpActivity">
-        <ImageView android:layout_width="160dp" android:layout_height="90dp"
-                   android:src="@drawable/instagram"
-                   app:tint="@android:color/white"
+        <ImageView android:layout_width="200dp" android:layout_height="200dp"
+                   android:src="@drawable/eunoia_logo"
+                   android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="110dp"
                    android:id="@+id/logo"/>
@@ -69,11 +68,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="6dp"
-                android:background="@android:color/white"
+                android:background="@color/colorPrimary"
                 android:text="Register"
                 android:textAllCaps="false"
                 android:textSize="17dp"
-                android:textColor="@android:color/black"/>
+                android:textColor="@android:color/white"/>
         <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
