--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,6 +51,7 @@ android:layout_below="@+id/app_bar_layout_profile_frag">
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linear1"
 android:orientation="vertical">
 <LinearLayout
         android:layout_width="match_parent"
@@ -65,9 +66,9 @@ android:padding="16dp">
     android:src="@drawable/profile">
     </de.hdodenhof.circleimageview.CircleImageView>
     <LinearLayout
-            android:layout_width="190dp"
+            android:layout_width="220dp"
             android:layout_height="90dp"
-    android:layout_marginLeft="60dp"
+    android:layout_marginLeft="30dp"
     android:layout_marginTop="15dp"
     android:orientation="vertical">
 
@@ -153,13 +154,41 @@ android:orientation="vertical">
 
 
             </LinearLayout>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="7dp"
+                    android:orientation="vertical">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textSize="12dp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
+                        android:id="@+id/total_donations"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Donations"
+                        android:textSize="12dp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
+                />
+
+
+            </LinearLayout>
+
 
         </LinearLayout>
         <Button
-                android:layout_width="170dp"
+                android:layout_width="200dp"
                 android:layout_height="42dp"
                 android:textAllCaps="false"
-                android:layout_marginLeft="10dp"
+                android:layout_margin="10dp"
+                android:gravity="center"
                 android:layout_marginTop="2dp"
                 android:id="@+id/edit_account_settings_account_btn"
         android:text="Edit Profile"/>
@@ -213,12 +242,19 @@ android:orientation="vertical">
                 android:layout_weight="1"
                 android:layout_height="49dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/save_large_icon"
+                android:src="@drawable/donation"
                 style="?android:buttonBarButtonStyle"/>
 
 
     </LinearLayout>
 </LinearLayout>
 </ScrollView>
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/scroll_view"
+            android:id="@+id/recyler_view_profile"
+    ></androidx.recyclerview.widget.RecyclerView>
+
 
 </RelativeLayout>
