--- a/app/src/main/res/layout/posts_layout.xml
+++ b/app/src/main/res/layout/posts_layout.xml
@@ -60,11 +60,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp">
+            <TextView
+                    android:id="@+id/likes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="0"
+                    android:textStyle="bold"
+                    android:textSize="25dp"
+                    android:textColor="@color/colorPrimaryDark"
+            />
 
             <ImageView
                     android:id="@+id/post_image_like_btn"
                     android:layout_width="41dp"
                     android:layout_height="40dp"
+                    android:layout_toEndOf="@+id/likes"
                     android:src="@drawable/heart_not_clicked"
             />
 
@@ -78,29 +89,20 @@
                     android:layout_marginStart="6dp"
             />
 
-            <ImageView
-                    android:id="@+id/post_save_comment_btn"
-                    android:layout_width="40dp"
-                    android:layout_height="39dp"
-                    android:src="@drawable/save_unfilled_large_icon"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginRight="3dp"
-            />
 
+<ImageView
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="3dp"
+android:layout_alignParentEnd="true"
+        android:id="@+id/post_donate_button"
+android:src="@drawable/donation">
+
+</ImageView>
         </RelativeLayout>
 
 
 
-        <TextView
-                android:id="@+id/likes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:textColor="@color/colorPrimaryDark"
-        />
 
         <TextView
                 android:id="@+id/publisher"
@@ -108,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textSize="25dp"
                 android:textColor="@color/colorPrimaryDark"
         />
 
@@ -117,21 +119,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:textSize="15dp"
-                android:textColor="@color/colorPrimary"
+                android:paddingBottom="15dp"
+                android:textSize="20dp"
+
+                android:textColor="@android:color/black"
         />
 
-        <TextView
-                android:id="@+id/comments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:textSize="16dp"
-                android:layout_marginBottom="5dp"
-                android:text=""
-                android:textColor="@color/colorPrimary"
-        />
 
 
 
